# Computer-Graphics-Ray-Intersection

./: CMakeLists.txt  assignment.html  vcpkg.json
src/: draw.cpp  main.cpp  ray_tracing.cpp  ray_tracing.h  scene.cpp
